2008-07-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	Patch by Matthias Clasen. Fixes #545059.

	* src/mt-common.h:
	* data/DwellClick_Factory.server.in.in:
	* data/PointerCapture_Factory.server.in.in:
	Use standard icon name.

2008-07-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.6

2008-07-20 Gerd Kohlberger <gerdk@svn.gnome.org>
	
	* NEWS: Prepare 2.23.5 release.

2008-07-16 Gerd Kohlberger <gerdk@svn.gnome.org>
	
	Patch by Thadeu Lima de Souza Cascardo (bug #543272)

	* configure.ac: Add dependency to xcursor

2008-07-09 Gerd Kohlberger <gerdk@svn.gnome.org>

	* Makefile.am: Add ofm.make and xmldocs.make to EXTRA_DIST.
	Disable schemas install for distcheck.

2008-07-08 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt.main.c: Make sure we really click on the current positon of
	the pointer. Part of the GOK workaround.
	* src/mt-cursor-manager.c: Don't send cursor_changed signals if
	the new cursor has no name.
	eg. busy, custom pixmap cursors.

2008-07-08 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac: Remove AC_SUBST for LINGUAS path.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* help/Makefile.am: Add -Wno-portability to get rid of
	gnome-doc-utils warnings.
	* src/Makefile.am: Use GNOME_MAINTAINER_MODE_DEFINES.
	* data/Makefile.am: Don't try to install schemas.in files. Sigh.

	* configure.ac:
	* Makefile.am:
	Use m4 subdir for macros + bump intltool requirement to 0.40.0 +
	misc. nitpicking.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/dwell-click-applet.glade:
	* data/pointer-capture-applet.glade:	
	Finally add Francesco to doc credits. See changelog from 2008-03-27.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (accessibility_enabled): Avoid getting launched by
	g-s-d again when we disable our gconf keys.
	* src/dwell-click-applet.c: Remove an unused var and some cleanup.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>
